@@ -71,8 +71,8 @@ public class PpktPhenotypicfeatureSpanish implements PpktPhenotypicFeatureGenera
         // if we have more than two, join all but the very last item with a comma
         String penultimate = items.stream()
                 .limit(items.size() - 1)
-                .collect(Collectors.joining(","));
-        String ultimate = items.get(items.size() - 1);
+                .collect(Collectors.joining(", "));
+        String ultimate = items.getLast();
         return penultimate + getConnector(ultimate) + ultimate;
     }
 
@@ -85,6 +85,13 @@ public class PpktPhenotypicfeatureSpanish implements PpktPhenotypicFeatureGenera
         List<OntologyTerm> excludedTerms = ontologyTerms.stream()
                 .filter(OntologyTerm::isExcluded).toList();
         List<String> excludedLabels = getTranslations(excludedTerms);
+        if(isFullTranslationsEnabled()) {
+            if (observedTerms.size() != observedLabels.size() ||
+                    excludedTerms.size() != excludedLabels.size()) {
+                throw new PhenolRuntimeException("Missing translation, function formatFeatures().");
+            }
+        }
+
         if (observedLabels.isEmpty() && excludedLabels.isEmpty()) {
             throw new PhenolRuntimeException("No phenotypic abnormalities"); // should never happen, actually!
         } else if (excludedLabels.isEmpty()) {
@@ -116,19 +123,26 @@ public class PpktPhenotypicfeatureSpanish implements PpktPhenotypicFeatureGenera
         List<OntologyTerm> excluded = getExcludedFeatures(ontologyTerms);
         List<String> observedSpanish = getTranslations(observed);
         List<String> excludedSpanish = getTranslations(excluded);
+        if(isFullTranslationsEnabled()) {
+            if (observed.size() != observedSpanish.size() ||
+                    excluded.size() != excludedSpanish.size()) {
+                throw new PhenolRuntimeException("Missing translation, function featuresAtOnset().");
+            }
+        }
+
         var observedStr = getCommaList(observedSpanish);
         var excludedStr = getCommaList(excludedSpanish);
         if (!observed.isEmpty() && ! excluded.isEmpty()) {
-            return String.format("%s presentó los siguientes síntomas: %s. Por el contrario, se %s los siguientes síntomas: %s.",
+            return String.format("%s presentó los siguientes síntomas: %s. Por el contrario, se %s: %s.",
                     personString,
                     observedStr,
-                    excluded.size()>1? "excluyeron":"excluyeró",
+                    excluded.size()>1? "excluyeron los siguientes síntomas":"excluyeró el siguiente síntoma",
                     excludedStr);
         } else if (!observed.isEmpty()) {
             return String.format("%s presentó los siguientes síntomas: %s.", personString, observedStr);
         } else if (!excluded.isEmpty()) {
-            return String.format("Al inicio de la enfermedad, se %s los siguientes síntomas: %s.",
-                    excluded.size()>1? "excluyeron":"excluyeró", excludedStr);
+            return String.format("Al inicio de la enfermedad, se %s: %s.",
+                    excluded.size()>1? "excluyeron los siguientes síntomas":"excluyeró el siguiente síntoma", excludedStr);
         } else {
             return "No se describieron explícitamente anomalías fenotípicas al inicio de la enfermedad";
         }
@@ -137,10 +151,16 @@ public class PpktPhenotypicfeatureSpanish implements PpktPhenotypicFeatureGenera
     public String featuresAtEncounter(String personString, String ageString, List<OntologyTerm> ontologyTerms) {
         List<OntologyTerm> observed = getObservedFeatures(ontologyTerms);
         List<OntologyTerm> excluded = getExcludedFeatures(ontologyTerms);
-        List<String> observedGerman = getTranslations(observed);
-        List<String> excludedGerman = getTranslations(excluded);
-        var observedStr = getCommaList(observedGerman);
-        var excludedStr = getCommaList(excludedGerman);
+        List<String> observedSpanish = getTranslations(observed);
+        List<String> excludedSpanish = getTranslations(excluded);
+        if(isFullTranslationsEnabled()) {
+            if (observed.size() != observedSpanish.size() ||
+                    excluded.size() != excludedSpanish.size()) {
+                throw new PhenolRuntimeException("Missing translation, function featuresAtEncounter().");
+            }
+        }
+        var observedStr = getCommaList(observedSpanish);
+        var excludedStr = getCommaList(excludedSpanish);
         if (!observed.isEmpty() && ! excluded.isEmpty()) {
             return String.format("%s presentaba %s los siguientes síntomas: %s. Por el contrario, se %s los siguientes síntomas: %s.",
                     personString,
