@@ -12,7 +12,10 @@ import java.util.Optional;
 public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
 
     private final BuildingBlockGenerator bbGenerator;
-    /** grammatical sex */
+
+    /**
+     * grammatical sex
+     */
     private enum GrammatikalischesGeschlecht {
         MAENNLICH, WEIBLICH, NEUTRUM
     }
@@ -32,7 +35,7 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
         String individualDescription;
         String onsetDescription;
         if (lastExamOpt.isPresent()) {
-            var lastExamAge =  lastExamOpt.get();
+            var lastExamAge = lastExamOpt.get();
             if (lastExamAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
                 Iso8601Age isoAge = (Iso8601Age) lastExamAge;
                 individualDescription = iso8601individualDescription(psex, isoAge);
@@ -43,8 +46,8 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
                 // should never happen
                 throw new PhenolRuntimeException("Did not recognize last exam age type " + lastExamAge.ageType());
             }
-        }  else {
-            individualDescription =  switch (psex) {
+        } else {
+            individualDescription = switch (psex) {
                 case FEMALE -> bbGenerator.probandWasAFemale();
                 case MALE -> bbGenerator.probandWasAMale();
                 default -> bbGenerator.probandWasAnIndividual();
@@ -54,7 +57,7 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
             var onsetAge = onsetOpt.get();
             if (onsetAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
                 Iso8601Age isoAge = (Iso8601Age) onsetAge;
-                onsetDescription =  iso8601onsetDescription(isoAge);
+                onsetDescription = iso8601onsetDescription(isoAge);
             } else if (onsetAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
                 HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) onsetAge;
                 onsetDescription = hpoOnsetDescription(hpoOnsetTermAge);
@@ -63,52 +66,46 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
                 throw new PhenolRuntimeException("Did not recognize last exam age type " + onsetAge.ageType());
             }
         } else {
-            onsetDescription = "Der Krankheitsbeginn wurde nicht angegeben";
+            onsetDescription = "Hastalığın başlangıcı belirtilmedi";
         }
         return String.format("%s. %s.", individualDescription, onsetDescription);
     }
 
     private String hpoOnsetDescription(HpoOnsetAge hpoOnsetTermAge) {
-        return String.format("Der Krankheitsbeginn trat %s auf",
+        return String.format("Hastalık %s başladı",
                 nameOfLifeStage(hpoOnsetTermAge));
     }
 
     private String nameOfLifeStage(HpoOnsetAge hpoOnsetTermAge) {
         if (hpoOnsetTermAge.isFetus()) {
-            return "während der Fetalperiode";
+            return "fetüs döneminde";
         } else if (hpoOnsetTermAge.isCongenital()) {
-            return "zum Zeitpunkt der Geburt";
+            return "doğumda";
         } else if (hpoOnsetTermAge.isInfant()) {
-            return "im Säuglingsalter";
+            return "infantil döneminde";
         } else if (hpoOnsetTermAge.isChild()) {
-            return "im Kindesalter";
+            return "çocukluk döneminde";
         } else if (hpoOnsetTermAge.isJuvenile()) {
-            return "im Jugendlichenalter";
+            return "ergenlik döneminde";
         } else if (hpoOnsetTermAge.isNeonate()) {
-            return "im Neugeborenenalter"; // +bbGenerator.newborn();
+            return "yenidoğan döneminde";
         } else if (hpoOnsetTermAge.isYoungAdult()) {
-            return "im jungen Erwachsenenalter" ;
+            return "genç yetişkinlik döneminde";
         } else if (hpoOnsetTermAge.isMiddleAge()) {
-            return "im mittleren Erwachsenenalter" ;
+            return "orta yaş döneminde";
         } else if (hpoOnsetTermAge.isLateAdultAge()) {
-            return "im späten Erwachsenenalter" ;
+            return "geç yetişkinlik döneminde";
         } else if (hpoOnsetTermAge.isAdult()) {
-            // d.h. nicht weiter spezifiziert
-            return "im Erwachsenenalter" ;
+            return "yetişkinlik döneminde";
         } else {
-            throw new PhenolRuntimeException("Could not identify German life stage name for HpoOnsetAge " + hpoOnsetTermAge.toString());
+            throw new PhenolRuntimeException("Could not identify Turkish life stage name for HpoOnsetAge " + hpoOnsetTermAge.toString());
         }
     }
 
     private String iso8601onsetDescription(Iso8601Age isoAge) {
-        return String.format("Der Krankheitsbeginn trat im Alter von %s auf",
+        return String.format("Hastalık %s başladı",
                 bbGenerator.yearsMonthsDaysOld(isoAge.getYears(), isoAge.getMonths(), isoAge.getDays()));
     }
-
-
-
-
-
 
 
     public String ageAndSexAtLastExamination(PpktIndividual individual) {
@@ -125,7 +122,7 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
         }
 
         if (ageOpt.isEmpty()) {
-           return sex;
+            return sex;
         }
         PhenopacketAge age = ageOpt.get();
         if (age.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
@@ -135,15 +132,15 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
             int d = isoage.getDays();
             if (psex.equals(PhenopacketSex.FEMALE)) {
                 if (y > 17) {
-                    return String.format("Eine %djährige Patientin", y);
+                    return String.format("%d yaşındaki bir hasta", y);
                 } else if (y > 9) {
-                    return String.format("Eine %djährige Jugendliche", y);
+                    return String.format("%d yaşındaki bir genç", y);
                 } else if (y > 0) {
-                    return String.format("Ein %djähriges Mädchen", y);
-                } else if (m>0) {
-                    return String.format("Ein %d Monate alter weiblicher Säugling", m);
-                } else  {
-                    return String.format("Ein %d Tage alter weiblicher Säugling", d);
+                    return String.format("%d yaşındaki bir kız çocuğu", y);
+                } else if (m > 0) {
+                    return String.format("%d aylık bir kız bebek", m);
+                } else {
+                    return String.format("%d günlük bir kız bebek", d);
                 }
             }
         } else {
@@ -184,30 +181,27 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
     }
 
 
-    private String imAlterVonIsoAgeExact(PhenopacketAge ppktAge) {
+    private String atIsoAgeExact(PhenopacketAge ppktAge) {
         Iso8601Age iso8601Age = (Iso8601Age) ppktAge;
         int y = iso8601Age.getYears();
         int m = iso8601Age.getMonths();
         int d = iso8601Age.getDays();
 
         if (y > 10) {
-            return String.format("Im Alter von %d Jahren", y);
+            return String.format("%d yaşında", y);
         } else if (y > 0) {
             if (m > 0) {
-                return String.format("Im Alter von %d %s und %d %s", y,
-                        y>1?"Jahren" : "Jahr",
-                        m,  m>1?"Monaten" : "Monat");
+                return String.format("%d %s %d %s yaşında", y, "yıl", m, "ay");
             } else {
-                return String.format("Im Alter von %d %s", y, y>1?"Jahren" : "Jahr");
+                return String.format("%d yaşında", y);
             }
         }
-        if (m>0) {
-            return String.format("Im Alter von %d %s y %d %s", m,  m>1?"Monaten" : "Monat",
-                    d,  d>1?"Tagen" : "Tag");
+        if (m > 0) {
+            return String.format("%d %s %d %s yaşında", m, "ay", d, "gün");
         } else {
-            return String.format("%d Tage",  d);
+            return String.format("%d günlükken", d);
         }
-     }
+    }
 
 
     private String iso8601individualDescription(PhenopacketSex psex, Iso8601Age iso8601Age) {
@@ -217,53 +211,33 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
         // if older
         if (y > 17) {
             return switch (psex) {
-                case FEMALE -> String.format("Die Probandin war eine %s Frau",
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.WEIBLICH));
-                case MALE -> String.format("Der Proband war ein %s Mann",
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.MAENNLICH));
-                default -> String.format("Der Proband war ein %s %s",
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.NEUTRUM),
-                        bbGenerator.individual());
+                case FEMALE -> String.format("Proband %d yaşında bir kadındı", y);
+                case MALE -> String.format("Proband %d yaşında bir adamdı", y);
+                default -> String.format("Proband %d yaşında bir bireydi", y);
             };
         } else if (y > 9) {
             return switch (psex) {
-                case FEMALE -> String.format("%s %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.WEIBLICH),
-                        bbGenerator.adolescentGirl());
-                case MALE -> String.format("%s %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.MAENNLICH),
-                        bbGenerator.adolescentBoy());
-                default -> String.format("%s %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.NEUTRUM),  bbGenerator.adolescentChild());
+                case FEMALE -> String.format("Proband %d yaşında bir genç kızdı", y);
+                case MALE -> String.format("Proband %d yaşında bir gençti", y);
+                default -> String.format("Proband %d yaşında bir ergendi", y);
             };
         } else if (y > 0) {
-            String age = String.format("Olgu %d yaş %d aylık", y, m);
             return switch (psex) {
-                case FEMALE -> String.format("%s %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.NEUTRUM), // "das Mädchen"
-                        bbGenerator.girl());
-                case MALE -> String.format("%s bir erkek çocuktu.", age);
-                default -> String.format("Bu Pat. bir yil on ay kacindik%s %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.NEUTRUM), // Das Individuum
-                        bbGenerator.child());
+                case FEMALE -> String.format("Proband %d yaşında bir kız çocuğuydu", y);
+                case MALE -> String.format("Proband %d yaşında bir erkek çocuğuydu", y);
+                default -> String.format("Proband %d yaşında bir çocuktu", y);
             };
         } else if (m > 0 || d > 0) {
             return switch (psex) {
-                case FEMALE -> String.format("%s ein %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.MAENNLICH), // "der weibliche Säungling",
-                        bbGenerator.femaleInfant());
-                case MALE -> String.format("%s ein %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.MAENNLICH),
-                        bbGenerator.maleInfant());
-                default -> String.format("%s %s %s", bbGenerator.probandWasA(),
-                        dAlter(iso8601Age, GrammatikalischesGeschlecht.MAENNLICH), // "der Säugling
-                        bbGenerator.infant());
+                case FEMALE -> String.format("Proband %d aylık bir kız bebekti", m);
+                case MALE -> String.format("Proband %d aylık bir erkek bebekti", m);
+                default -> String.format("Proband %d günlük bir bebekti", d);
             };
         } else {
             return switch (psex) {
-                case FEMALE -> String.format("Die Probandin war ein %s", bbGenerator.probandWasA(), bbGenerator.newbornGirl());
-                case MALE -> String.format("Der Proband war ein %s", bbGenerator.probandWasA(), bbGenerator.newbornBoy());
-                default -> String.format("Der Proband war ein Neugeborenes ohne angegebenes Geschlecht");
+                case FEMALE -> "Proband yenidoğan bir kız bebekti";
+                case MALE -> "Proband yenidoğan bir erkek bebekti";
+                default -> "Proband cinsiyeti belirtilmemiş bir yenidoğandı";
             };
         }
     }
@@ -278,28 +252,28 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
         int d = iso8601Age.getDays();
         List<String> components = new ArrayList<>();
         if (y > 0) {
-            components.add(String.format("%d %s", y, y > 1 ? "Jahre" : "Jahr"));
+            components.add(String.format("%d yaşinda", y));
         }
         if (m > 0) {
-            components.add(String.format("%d %s", m, m > 1 ? "Monate" : "Monat"));
+            components.add(String.format("%d aylıkken", m));
         }
         if (d > 0) {
-            components.add(String.format("%d %s", d, d > 1 ? "Tage" : "Tag"));
+            components.add(String.format("%d günlükken", d));
         }
         String ymd;
         if (components.isEmpty()) {
             ymd = "";
         } else if (components.size() == 1) {
-            ymd = components.get(0);
+            ymd = components.getFirst();
         } else if (components.size() == 2) {
-            ymd = String.format("%s und %s", components.get(0), components.get(1));
+            ymd = String.format("%s ve %s", components.get(0), components.get(1));
         } else {
-            ymd = String.format("%s, %s und %s", components.get(0), components.get(1), components.get(2));
+            ymd = String.format("%s, %s ve %s", components.get(0), components.get(1), components.get(2));
         }
         return switch (geschlecht) {
-            case MAENNLICH -> String.format("%s alter", ymd);
-            case WEIBLICH -> String.format("%s alte", ymd);
-            case NEUTRUM -> String.format("%s altes", ymd);
+            case MAENNLICH -> String.format("%s yaşında", ymd);
+            case WEIBLICH -> String.format("%s yaşında", ymd);
+            case NEUTRUM -> String.format("%s yaşında", ymd);
         };
     }
 
@@ -310,76 +284,78 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
         int d = iso8601Age.getDays();
         if (psex.equals(PhenopacketSex.MALE)) {
             if (iso8601Age.getMonths() == 0) {
-                return String.format("ein %djähriger Junge", y);
+                return String.format("%d yaşında bir erkek çocuk", y);
             } else {
-                return String.format("ein %d %s, %d %s alter Junge", y, y>1?"Jahre":"Jahr", m, m>1?"Monate":"Monat");
+                return String.format("%d %s yaş, %d %s aylıkken bir erkek çocuk", y, y > 1 ? "Jahre" : "Jahr", m, m > 1 ? "Monate" : "Monat");
             }
         } else if (psex.equals(PhenopacketSex.FEMALE)) {
             if (iso8601Age.getMonths() == 0) {
-                return String.format("ein %djähriges Mädchen", y);
+                return String.format("%d yaşında bir kız çocuk", y);
             } else {
-                return String.format("ein %d %s, %d %s altes Mädchen", y, y>1?"Jahre":"Jahr", m, m>1?"Monate":"Monat");
+                return String.format("%d %s yaş, %d %s aylıkken bir kız çocuk", y, y > 1 ? "Jahre" : "Jahr", m, m > 1 ? "Monate" : "Monat");
             }
         }
         if (iso8601Age.getMonths() == 0) {
-            return String.format("ein %djähriges Kind", y);
+            return String.format("%d yaşında bir çocuk", y);
         } else {
-            return String.format("ein %d %s, %d %s altes Kind", y, y>1?"Jahre":"Jahr", m, m>1?"Monate":"Monat");        }
+            return String.format("%d yaş, %d aylıkken bir çocuk", y, m);
+        }
     }
 
     private String monthString(int m) {
-        return m>1 ? "Monate": "Monat";
+        return "ay";
     }
 
     private String dayString(int d) {
-        return d>1 ? "Tage": "Tag";
+        return "gün";
     }
 
     private String iso8601ToMonthDay(Iso8601Age iso8601Age) {
         int m = iso8601Age.getMonths();
         int d = iso8601Age.getDays();
         if (m == 0) {
-            return String.format("de %d dias", d);
-        } else if (d>0){
-            return String.format("%d %s und %d %s", m, monthString(m), d, dayString(d));
+            return String.format("%d günlükken", d);
+        } else if (d > 0) {
+            return String.format("%d ay %d günlükken", m, d);
         } else {
-            return String.format("%d %s", m, m>1 ? "Monate": "Monat");
+            return String.format("%d aylıkken", m);
         }
     }
 
     /**
      * Create a phrase such as "at the age of 7 years, 4 months, and 2 days"
      * Leave out the months and days if they are zero.
+     *
      * @param isoAge
      * @return
      */
     private String iso8601AtAgeOf(Iso8601Age isoAge) {
         List<String> components = new ArrayList<>();
 
-        if (isoAge.getYears()>1) {
-            components.add(String.format("%d Jahren", isoAge.getYears()));
+        if (isoAge.getYears() > 1) {
+            components.add(String.format("%d yaşinda", isoAge.getYears()));
         } else if (isoAge.getYears() == 1) {
-            components.add("einem Jahr");
+            components.add("bir yaşinda");
         }
         if (isoAge.getMonths() > 1) {
-            components.add(String.format("%d Monaten", isoAge.getMonths()));
+            components.add(String.format("%d aylıkken", isoAge.getMonths()));
         } else if (isoAge.getMonths() == 1) {
-            components.add("einem Monat");
+            components.add("bir aylıkken");
         }
-        if (isoAge.getDays()>1) {
-            components.add(String.format("%d Tagen", isoAge.getDays()));
-        } else if (isoAge.getDays()==1) {
-            components.add("einem Tag");
+        if (isoAge.getDays() > 1) {
+            components.add(String.format("%d günlükken", isoAge.getDays()));
+        } else if (isoAge.getDays() == 1) {
+            components.add("bir günlükken");
         }
         if (components.isEmpty()) {
-            return "bei der Geburt";
+            return "doğumda";
         } else if (components.size() == 1) {
-            return "im Alter von " + components.getFirst();
+            return "yaşında " + components.getFirst();
         } else if (components.size() == 2) {
-            return "im Alter von  " + components.get(0) + " und " + components.get(1);
+            return "yaşında " + components.get(0) + " ve " + components.get(1);
         } else {
-            return "im Alter von "  + components.get(0) + ", " + components.get(1) +
-                    " und " + components.get(2);
+            return "yaşında " + components.get(0) + ", " + components.get(1) +
+                    " ve " + components.get(2);
         }
     }
 /*
@@ -410,33 +386,33 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
             };
         } else if (hpoOnsetTermAge.isCongenital()) {
             return switch (psex) {
-                case FEMALE -> "Die Probandin war ein weibliches Neugeborenes";
-                case MALE -> "Der Probandwar ein männliches Neugeborenes";
-                default -> "Der Patient war ein Neugeborenes ohne angegebenes Geschelcht";
+                case FEMALE -> "Proband doğumda kadın bir yenidoğandı";
+                case MALE -> "Proband doğumda erkek bir yenidoğandı";
+                default -> "Proband doğumda cinsiyeti belirtilmemiş bir yenidoğandı";
             };
         } else if (hpoOnsetTermAge.isInfant()) {
             return switch (psex) {
-                case FEMALE -> "Die Probandin war ein weiblicher Säugling";
-                case MALE -> "Der Proband war ein männlicher Säugling";
-                default -> "Der Proband war ein Säugling ohne angegebenes Geschlecht";
+                case FEMALE -> "Proband bir kız bebekti";
+                case MALE -> "Proband bir erkek bebekti";
+                default -> "Proband cinsiyeti belirtilmemiş bir bebekti";
             };
         } else if (hpoOnsetTermAge.isChild()) {
             return switch (psex) {
-                case FEMALE -> "Die Probandin war ein Mädchen";
-                case MALE -> "Der Proband war ein Junge";
-                default -> "Der Proband war ein Kind ohne angegebenes Geschlecht";
+                case FEMALE -> "Proband bir kız çocuğuydu";
+                case MALE -> "Proband bir erkek çocuğuydu";
+                default -> "Proband cinsiyeti belirtilmemiş bir çocuktu";
             };
         } else if (hpoOnsetTermAge.isJuvenile()) {
             return switch (psex) {
-                case FEMALE -> "Die Probandin war eine Jugendliche";
-                case MALE -> "Der Proband war ein Jugendlicher";
-                default -> "Der Proband war ein Jugendlicher ohne angegebenes Geschlecht";
+                case FEMALE -> "Proband bir genç kızdı";
+                case MALE -> "Proband bir gençti";
+                default -> "Proband cinsiyeti belirtilmemiş bir ergendi";
             };
         } else if (hpoOnsetTermAge.isAdult()) {
             return switch (psex) {
-                case FEMALE -> "Die Probandin war eine Frau";
-                case MALE -> "Der Proband war ein Mann";
-                default -> "Der Proband war eine erwachsene Person ohne angegebenes Geschlecht";
+                case FEMALE -> "Proband yetişkin bir kadındı";
+                case MALE -> "Proband yetişkin bir adamdı";
+                default -> "Proband yetişkin bir bireydi";
 
             };
         } else {
@@ -448,35 +424,44 @@ public class PpktIndividualTurkish implements PPKtIndividualInfoGenerator {
     @Override
     public String heSheIndividual(PhenopacketSex psex) {
         return switch (psex) {
-            case FEMALE -> "sie";
-            case MALE -> "er";
-            default -> "die Person";
+            case FEMALE -> "o";
+            case MALE -> "o";
+            default -> "kişi";
         };
     }
 
     @Override
     public String atAgeForVignette(PhenopacketAge ppktAge) {
         if (ppktAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            return imAlterVonIsoAgeExact(ppktAge);
+            return "Yaşında " + atIsoAgeExact(ppktAge);
         } else if (ppktAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            String label = ppktAge.age(); // something like "Infantile onset"
-            return switch (label) {
-                case "Infantile onset" -> "Als Säugling";
-                case "Childhood onset" -> "In der Kindheit";
-                case "Neonatal onset"  -> "In der neugeborenen Zeit";
-                case "Congenital onset" -> "Zum Zeitpunkt der Geburt";
-                case "Adult onset" -> "Im Erwachsenenalter";
-                case "Juvenile onset" -> "Im Jugendlichenalter";
-                default-> {
-                    throw new PhenolRuntimeException("No German translation for " + label);
-                }
-            };
+            if (ppktAge.isFetus()) {
+                return "Fetal dönemde";
+            } else if (ppktAge.isCongenital()) {
+                return "Doğumda";
+            } else if (ppktAge.isEmbryo()) {
+                return "Embriyonik dönemde";
+            } else if (ppktAge.isNeonate()) {
+                return "Yenidoğan döneminde";
+            } else if (ppktAge.isInfant()) {
+                return "Bebeklik döneminde";
+            } else if (ppktAge.isChild()) {
+                return "Çocukken";
+            } else if (ppktAge.isJuvenile()) {
+                return "Ergenlik döneminde";
+            } else if (ppktAge.isYoungAdult()) {
+                return "Genç yetişkinken";
+            } else if (ppktAge.isMiddleAge()) {
+                return "Orta yaşta";
+            } else if (ppktAge.isLateAdultAge()) {
+                return "Geç yetişkinlik döneminde";
+            } else if (ppktAge.isAdult()) {
+                return "Yetişkinlikte";
+            } else {
+                throw new PhenolRuntimeException("Tanımlanamayan başlangıç: " + ppktAge.toString());
+            }
         } else {
-            return ""; // should never get here
+            throw new PhenolRuntimeException("Geçersiz yaş türü");
         }
     }
-
-
-
-
 }
